--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                 <div class="future-plans">
                     <ul class="plans">
                         <li>Make the site dynamic.
-                            <p>I don't yet have funding for monthly hosting; if you'd like to help with any amount, you can donate at <a href="https://buymeacoffee.com/saitoxbeats" target="_blank" rel="noopener">buymeacoffee.com/saitoxbeats</a>.</p>
+                            <p>I don't yet have funding for monthly hosting; if you'd like to help with any amount, you can donate at <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#72a4f2', 'G2G21LEW6R');kofiwidget2.draw();</script> .</p>
                         </li>
 
                         <li>Allow direct wallpaper uploads.
