--- a/mobile.html
+++ b/mobile.html
@@ -11,7 +11,7 @@
     <header class="site-header">
       <div class="brand">
         <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/4/40/Aphex_Twin_logo.svg" alt="Aphex Twin logo" width="48" height="48" loading="lazy">
-        <div class="title">Only web for Aphex Twin Wallpapers :]</div>
+        <div class="title">A simple Aphex Twin Wallpaper site :]</div>
       </div>
       <nav class="main-nav" aria-label="Main navigation">
         <a class="btn" href="index.html">Desktop</a>
