--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Desktop Wallpapers — AFXWALLS</title>
+  <link rel="icon" href="icon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="icon.svg">
+  <meta name="theme-color" content="#000">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <div class="container">
     <header class="site-header">
       <div class="brand">
-        <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/4/40/Aphex_Twin_logo.svg" alt="Aphex Twin logo" width="48" height="48" loading="lazy">
+        <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/4/40/Aphex_Twin_logo.svg" alt="Aphex Twin logo"
+          width="48" height="48" loading="lazy">
         <div class="title">A simple Aphex Twin Wallpaper site :]</div>
       </div>
       <nav class="main-nav" aria-label="Main navigation">
@@ -24,57 +30,86 @@
       <section class="panel">
         <div class="gallery" aria-live="polite">
           <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/CRT_AFX.jpg">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/CRT_AFX_PREVIEW.webp" alt="Desktop wallpaper 1" loading="lazy">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/CRT_AFX_PREVIEW.webp"
+              alt="Desktop wallpaper 1" loading="lazy">
             <div class="meta">2560×1440</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/Angle_Photo_AFX.jpg">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/Angle_Photo_AFX_PREVIEW.webp" alt="Desktop wallpaper 2" loading="lazy">
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/Angle_Photo_AFX.jpg">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/Angle_Photo_AFX_PREVIEW.webp"
+              alt="Desktop wallpaper 2" loading="lazy">
             <div class="meta">2048×1360</div>
           </a>
 
           <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/RichardShow.jpg">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/RichardShow_PREVIEW.webp" alt="Desktop wallpaper 3" loading="lazy">
-            <div class="meta">1920x1080</div>
-          </a>
-          
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/AFX_Water.png">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/AFX_Water_PREVIEW.webp" alt="Desktop wallpaper 4" loading="lazy">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/RichardShow_PREVIEW.webp"
+              alt="Desktop wallpaper 3" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/AFX%20Water-simple.png">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/AFX%20Water-simple_PREVIEW.webp" alt="Desktop wallpaper 5" loading="lazy">
+          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/AFX_Water.png">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/AFX_Water_PREVIEW.webp"
+              alt="Desktop wallpaper 4" loading="lazy">
+            <div class="meta">1920x1080</div>
+          </a>
+
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/AFX%20Water-simple.png">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/AFX%20Water-simple_PREVIEW.webp"
+              alt="Desktop wallpaper 5" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
 
           <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/AFX_Natu.png">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/AFX_Natu_PREVIEW.webp" alt="Desktop wallpaper 6" loading="lazy">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/AFX_Natu_PREVIEW.webp"
+              alt="Desktop wallpaper 6" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/AFX%20Train-1080p.png">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/AFX%20Train-1080p_PREVIEW.webp" alt="Desktop wallpaper 7" loading="lazy">
-            <div class="meta">1920x1080</div>
-          </a>
-          
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/aphex%20twin%20ground.png">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/aphex%20twin%20ground_PREVIEW.webp" alt="Desktop wallpaper 8" loading="lazy">
-            <div class="meta">1920x1080</div>
-          </a>
-
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/SpaceStyle_AFX.png">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/SpaceStyle_AFX_PREVIEW.webp" alt="Desktop wallpaper 9" loading="lazy">
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/AFX%20Train-1080p.png">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/AFX%20Train-1080p_PREVIEW.webp"
+              alt="Desktop wallpaper 7" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/blackWhite_simple_AFX.png">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/blackWhite_simple_AFX_PREVIEW.webp" alt="Desktop wallpaper 10" loading="lazy">
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/aphex%20twin%20ground.png">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/aphex%20twin%20ground_PREVIEW.webp"
+              alt="Desktop wallpaper 8" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/blackwhite_dif_AFX.png">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/blackwhite_dif_AFX_PREVIEW.webp" alt="Desktop wallpaper 11" loading="lazy">
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/SpaceStyle_AFX.png">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/SpaceStyle_AFX_PREVIEW.webp"
+              alt="Desktop wallpaper 9" loading="lazy">
+            <div class="meta">1920x1080</div>
+          </a>
+
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/blackWhite_simple_AFX.png">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/blackWhite_simple_AFX_PREVIEW.webp"
+              alt="Desktop wallpaper 10" loading="lazy">
+            <div class="meta">1920x1080</div>
+          </a>
+
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/blackwhite_dif_AFX.png">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/blackwhite_dif_AFX_PREVIEW.webp"
+              alt="Desktop wallpaper 11" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
         </div>
