--- a/mobile.html
+++ b/mobile.html
@@ -1,16 +1,22 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Mobile Wallpapers — AFXWALLS</title>
+  <link rel="icon" href="icon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="icon.svg">
+  <meta name="theme-color" content="#000">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <div class="container">
     <header class="site-header">
       <div class="brand">
-        <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/4/40/Aphex_Twin_logo.svg" alt="Aphex Twin logo" width="48" height="48" loading="lazy">
+        <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/4/40/Aphex_Twin_logo.svg" alt="Aphex Twin logo"
+          width="48" height="48" loading="lazy">
         <div class="title">A simple Aphex Twin Wallpaper site :]</div>
       </div>
       <nav class="main-nav" aria-label="Main navigation">
@@ -23,99 +29,136 @@
     <main>
       <section class="panel">
         <div class="gallery">
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/GuySit_DIF_AFX.png" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/GuySit_DIF_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 1" loading="lazy">
+          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/GuySit_DIF_AFX.png"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/GuySit_DIF_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 1" loading="lazy">
             <div class="meta">1080×1920</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/GuySit_opacity_AFX.png" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/GuySit_opacity_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 2" loading="lazy">
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/GuySit_opacity_AFX.png"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/GuySit_opacity_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 2" loading="lazy">
             <div class="meta">1080×1920</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/BlueBuild_AFX.png" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/BlueBuild_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 3" loading="lazy">
+          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/BlueBuild_AFX.png"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/BlueBuild_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 3" loading="lazy">
             <div class="meta">1080×1920</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/Ocean_AFX.png" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/Ocean_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 4" loading="lazy">
+          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/Ocean_AFX.png"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/Ocean_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 4" loading="lazy">
             <div class="meta">800x2002</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/BuildsWithFog_AFX.png" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/BuildsWithFog_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 5" loading="lazy">
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/BuildsWithFog_AFX.png"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/BuildsWithFog_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 5" loading="lazy">
             <div class="meta">1000×1334</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/DownViewBuild_AFX.png" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/DownViewBuild_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 6" loading="lazy">
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/DownViewBuild_AFX.png"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/DownViewBuild_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 6" loading="lazy">
             <div class="meta">800x2002</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/CropInvBrutal_AFX.png" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/CropInvBrutal_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 7" loading="lazy">
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/CropInvBrutal_AFX.png"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/CropInvBrutal_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 7" loading="lazy">
             <div class="meta">1080×1920</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/CropBrutal_AFX.png" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/CropBrutal_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 8" loading="lazy">
+          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/CropBrutal_AFX.png"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/CropBrutal_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 8" loading="lazy">
             <div class="meta">800x2002</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/CropBuild_AFX.png" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/CropBuild_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 9" loading="lazy">
+          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/CropBuild_AFX.png"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/CropBuild_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 9" loading="lazy">
             <div class="meta">800x2002</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/GuySit_mask_AFX.png" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/GuySit_mask_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 10" loading="lazy">
+          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/GuySit_mask_AFX.png"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/GuySit_mask_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 10" loading="lazy">
             <div class="meta">1080×1920</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/Syro_BlackBG.png" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/Syro_BlackBG_PREVIEW.webp" 
-            alt="Mobile wallpaper 11" loading="lazy">
+          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/Syro_BlackBG.png"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/Syro_BlackBG_PREVIEW.webp"
+              alt="Mobile wallpaper 11" loading="lazy">
             <div class="meta">1080×1920</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/BlackCatMask_AFX.jpg" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/BlackCatMask_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 12" loading="lazy">
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/BlackCatMask_AFX.jpg"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/BlackCatMask_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 12" loading="lazy">
             <div class="meta">800x2002</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/BlackCatInv_AFX.jpg" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/BlackCatInv_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 13" loading="lazy">
+          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/BlackCatInv_AFX.jpg"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/BlackCatInv_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 13" loading="lazy">
             <div class="meta">800x2002</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/DIF_AFX.png" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/DIF_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 14" loading="lazy">
+          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/DIF_AFX.png"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/DIF_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 14" loading="lazy">
             <div class="meta">720×1600</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/Simple_AFX.png" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/Simple_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 15" loading="lazy">
+          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/Simple_AFX.png"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/Simple_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 15" loading="lazy">
             <div class="meta">1080×1920</div>
           </a>
 
-          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/Brutalist_AFX.jpg" target="_blank">
-            <img src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/Brutalist_AFX_PREVIEW.webp" 
-            alt="Mobile wallpaper 16" loading="lazy">
+          <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/Brutalist_AFX.jpg"
+            target="_blank">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Mobile/mbl_Previews/Brutalist_AFX_PREVIEW.webp"
+              alt="Mobile wallpaper 16" loading="lazy">
             <div class="meta">736x1104</div>
           </a>
         </div>
@@ -125,4 +168,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
