--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>About — AFXWALLS</title>
+    <link rel="icon" href="icon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="icon.svg">
+    <meta name="theme-color" content="#000">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -38,25 +41,37 @@
                 <div class="future-plans">
                     <ul class="plans">
                         <li>Make the site dynamic.
-                            <p>I don't yet have funding for monthly hosting; if you'd like to help with any amount, you can donate at <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#72a4f2', 'G2G21LEW6R');kofiwidget2.draw();</script> .</p>
+                            <p>I don't yet have funding for monthly hosting; if you'd like to help with any amount, you
+                                can donate at
+                                <script type='text/javascript'
+                                    src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
+                                <script
+                                    type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#72a4f2', 'G2G21LEW6R'); kofiwidget2.draw();</script>
+                                .
+                            </p>
                         </li>
 
                         <li>Allow direct wallpaper uploads.
-                            <p>Anyone will be able to add wallpapers to the site without emailing — upload and publish directly through the interface.</p>
+                            <p>Anyone will be able to add wallpapers to the site without emailing — upload and publish
+                                directly through the interface.</p>
                         </li>
 
                         <li>Built-in wallpaper editor.
-                            <p>A simple online editor (Photopea-like) with ready-made templates and a vector version of the artist's logo to apply to images. It will be possible to export to your computer or send directly to the gallery.</p>
+                            <p>A simple online editor (Photopea-like) with ready-made templates and a vector version of
+                                the artist's logo to apply to images. It will be possible to export to your computer or
+                                send directly to the gallery.</p>
                         </li>
 
                         <li>Preserve anonymity.
-                            <p>This site is just a free gallery for fans of the artist's iconography — there will be no account system or forum; anonymity and open access will be a priority.</p>
+                            <p>This site is just a free gallery for fans of the artist's iconography — there will be no
+                                account system or forum; anonymity and open access will be a priority.</p>
                         </li>
                     </ul>
                 </div>
 
                 <p>Site created by <a href="https://saitoxbeats.me/" target="_blank" rel="noopener">Saitox Beats</a> -
-                    <a href="https://github.com/SaitoxBeats" target="_blank" rel="noopener">GitHub</a></p>
+                    <a href="https://github.com/SaitoxBeats" target="_blank" rel="noopener">GitHub</a>
+                </p>
             </section>
         </main>
     </div>
