new wallpaper for desktop

--- a/index.html
+++ b/index.html
@@ -28,11 +28,72 @@
 
     <main>
       <section class="panel">
+
+        <div class="panel-header">
+          <h1>9/19/2025 UPDATE - New desktop wallpapers!</h1>
+        </div>
+
         <div class="gallery" aria-live="polite">
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/ambient_AFX.png">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/ambient_AFX_PREVIEW.webp"
+              alt="Desktop wallpaper 18" loading="lazy">
+            <div class="meta">1600x1000</div>
+          </a>
+
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/scr_AFX.png">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/scr_AFX_PREVIEW.webp"
+              alt="Desktop wallpaper 17" loading="lazy">
+            <div class="meta">1920x1080</div>
+          </a>
+
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/Card_AFX.jpg">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/Card_AFX_PREVIEW.webp"
+              alt="Desktop wallpaper 16" loading="lazy">
+            <div class="meta">3072x2048</div>
+          </a>
+
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/Ricard.png">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/Ricard_PREVIEW.webp"
+              alt="Desktop wallpaper 15" loading="lazy">
+            <div class="meta">1581x1054</div>
+          </a>
+
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/Richard.jpg">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/Richard_PREVIEW.webp"
+              alt="Desktop wallpaper 14" loading="lazy">
+            <div class="meta">1920x1080</div>
+          </a>
+
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/KomaruSolevoy_AFX.png">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/KomaruSolevoy_AFX_PREVIEW.webp"
+              alt="Desktop wallpaper 13" loading="lazy">
+            <div class="meta">3769x2120</div>
+          </a>
+
+          <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/deteh_AFX.png">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/deteh_AFX_PREVIEW.webp"
+              alt="Desktop wallpaper 12" loading="lazy">
+            <div class="meta">1500x869</div>
+          </a>
+          
           <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/CRT_AFX.jpg">
             <img
               src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/CRT_AFX_PREVIEW.webp"
-              alt="Desktop wallpaper 1" loading="lazy">
+              alt="Desktop wallpaper 11" loading="lazy">
             <div class="meta">2560×1440</div>
           </a>
 
@@ -40,21 +101,21 @@
             href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/Angle_Photo_AFX.jpg">
             <img
               src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/Angle_Photo_AFX_PREVIEW.webp"
-              alt="Desktop wallpaper 2" loading="lazy">
+              alt="Desktop wallpaper 10" loading="lazy">
             <div class="meta">2048×1360</div>
           </a>
 
           <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/RichardShow.jpg">
             <img
               src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/RichardShow_PREVIEW.webp"
-              alt="Desktop wallpaper 3" loading="lazy">
+              alt="Desktop wallpaper 9" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
 
           <a class="thumb" href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/AFX_Water.png">
             <img
               src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/AFX_Water_PREVIEW.webp"
-              alt="Desktop wallpaper 4" loading="lazy">
+              alt="Desktop wallpaper 8" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
 
@@ -62,7 +123,7 @@
             href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/AFX%20Water-simple.png">
             <img
               src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/AFX%20Water-simple_PREVIEW.webp"
-              alt="Desktop wallpaper 5" loading="lazy">
+              alt="Desktop wallpaper 7" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
 
@@ -77,7 +138,7 @@
             href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/AFX%20Train-1080p.png">
             <img
               src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/AFX%20Train-1080p_PREVIEW.webp"
-              alt="Desktop wallpaper 7" loading="lazy">
+              alt="Desktop wallpaper 5" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
 
@@ -85,7 +146,7 @@
             href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/aphex%20twin%20ground.png">
             <img
               src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/aphex%20twin%20ground_PREVIEW.webp"
-              alt="Desktop wallpaper 8" loading="lazy">
+              alt="Desktop wallpaper 4" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
 
@@ -93,7 +154,7 @@
             href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/SpaceStyle_AFX.png">
             <img
               src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/SpaceStyle_AFX_PREVIEW.webp"
-              alt="Desktop wallpaper 9" loading="lazy">
+              alt="Desktop wallpaper 3" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
 
@@ -101,7 +162,7 @@
             href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/blackWhite_simple_AFX.png">
             <img
               src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/blackWhite_simple_AFX_PREVIEW.webp"
-              alt="Desktop wallpaper 10" loading="lazy">
+              alt="Desktop wallpaper 2" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
 
@@ -109,7 +170,7 @@
             href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/blackwhite_dif_AFX.png">
             <img
               src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/blackwhite_dif_AFX_PREVIEW.webp"
-              alt="Desktop wallpaper 11" loading="lazy">
+              alt="Desktop wallpaper 1" loading="lazy">
             <div class="meta">1920x1080</div>
           </a>
         </div>
