--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
 
         <div class="gallery" aria-live="polite">
           <a class="thumb"
+            href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/YellowSyro_AFX.jpg">
+            <img
+              src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/YellowSyro_AFX_PREVIEW.webp"
+              alt="Desktop wallpaper 19" loading="lazy">
+            <div class="meta">1600x1000</div>
+          </a>
+          
+          <a class="thumb"
             href="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/ambient_AFX.png">
             <img
               src="https://file.garden/Z5fpJocFXF3TjRhg/AFX%20WALLS%20DATABASE/Desktop/dsk_Previews/ambient_AFX_PREVIEW.webp"
